; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_rtmppkt.c_ff_rtmp_packet_read_internal.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_rtmppkt.c_ff_rtmp_packet_read_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EAGAIN = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_rtmp_packet_read_internal(i32* %0, i32* %1, i32 %2, i32** %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32**, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32** %3, i32*** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  br label %15

15:                                               ; preds = %6, %39
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32, i32* %10, align 4
  %19 = load i32**, i32*** %11, align 8
  %20 = load i32*, i32** %12, align 8
  %21 = load i32, i32* %13, align 4
  %22 = call i32 @rtmp_packet_read_one_chunk(i32* %16, i32* %17, i32 %18, i32** %19, i32* %20, i32 %21)
  store i32 %22, i32* %14, align 4
  %23 = load i32, i32* %14, align 4
  %24 = icmp sgt i32 %23, 0
  br i1 %24, label %30, label %25

25:                                               ; preds = %15
  %26 = load i32, i32* %14, align 4
  %27 = load i32, i32* @EAGAIN, align 4
  %28 = call i32 @AVERROR(i32 %27)
  %29 = icmp ne i32 %26, %28
  br i1 %29, label %30, label %32

30:                                               ; preds = %25, %15
  %31 = load i32, i32* %14, align 4
  store i32 %31, i32* %7, align 4
  br label %40

32:                                               ; preds = %25
  %33 = load i32*, i32** %8, align 8
  %34 = call i32 @ffurl_read(i32* %33, i32* %13, i32 1)
  %35 = icmp ne i32 %34, 1
  br i1 %35, label %36, label %39

36:                                               ; preds = %32
  %37 = load i32, i32* @EIO, align 4
  %38 = call i32 @AVERROR(i32 %37)
  store i32 %38, i32* %7, align 4
  br label %40

39:                                               ; preds = %32
  br label %15

40:                                               ; preds = %36, %30
  %41 = load i32, i32* %7, align 4
  ret i32 %41
}

declare dso_local i32 @rtmp_packet_read_one_chunk(i32*, i32*, i32, i32**, i32*, i32) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @ffurl_read(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
